# weather-station

./: .clang-format  .clangd  .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  CLAUDE.md  CMakeLists.txt  Kconfig  LICENSE  README.md  VERSION  gcovr.cfg  generate-diagrams.sh  hardware_idea.md  index.html  mkdocs.yml  sitemap.xml  west.yml
.claude/: settings.local.json
.devcontainer/: Dockerfile  Dockerfile.ci  devcontainer.json  launch.json  net-setup.sh  setup-claude.sh  start-display.sh  tasks.json
.github/workflows/: benchmark.yml  ci.yml
adr/: index.html
adr/ADR-001-repo-and-workspace-structure/: index.html
adr/ADR-002-zbus-as-system-bus/: index.html
adr/ADR-003-sensor-event-data-model/: index.html
adr/ADR-004-trigger-driven-sampling/: index.html
adr/ADR-005-fake-sensor-subsystem/: index.html
adr/ADR-006-lora-channel-boundary/: index.html
adr/ADR-007-gateway-display-combined/: index.html
adr/ADR-008-kconfig-app-composition/: index.html
adr/ADR-009-native-sim-first/: index.html
adr/ADR-010-ci-and-dev-environment/: index.html
adr/ADR-011-http-dashboard/: index.html
architecture/: index.html
backlog/: index.html
docs/: backlog.md  index.md  x-forwarding.md
hardware/: index.html
lib/: CMakeLists.txt  Kconfig
proto/: sensor_message.proto
scripts/: parse_footprint.py
search/: search_index.json
tests/: VERSION
tests/mqtt_publisher/: CMakeLists.txt  prj.conf  testcase.yaml
tests/mqtt_publisher/boards/: native_sim_native_64.overlay
tests/mqtt_publisher/src/: main.c
user/: index.html
zephyr/: patches.yml
(+253 files in other folders)
